# workshoptestwarez2023

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: run_tests.yml
tests/: test_auth.py
